--- a/requirements.in
+++ b/requirements.in
@@ -3,3 +3,6 @@ django-bootstrap-datepicker-plus==1.0.0
 django==2.0.3
 pytest-django==3.1.2
 pytest-mock==1.7.1
+gunicorn
+dj-database-url
+psycopg2
