--- a/requirements.txt
+++ b/requirements.txt
@@ -6,11 +6,14 @@
 #
 attrs==17.4.0             # via pytest
 colorama==0.3.9           # via pytest
+dj-database-url==0.5.0
 django-bootstrap-datepicker-plus==1.0.0
 django-bootstrap4==0.0.6
 django==2.0.3
+gunicorn==19.7.1
 more-itertools==4.1.0     # via pytest
 pluggy==0.6.0             # via pytest
+psycopg2==2.7.4
 py==1.5.3                 # via pytest
 pytest-django==3.1.2
 pytest-mock==1.7.1
